--- a/TelergramEALLOBot/TelergramEALLOBot.csproj
+++ b/TelergramEALLOBot/TelergramEALLOBot.csproj
@@ -65,7 +65,10 @@
     <Compile Include="Classes\DataBases\RequestsTypeDataBase.cs" />
     <Compile Include="Classes\DataBases\ResponseDataBase.cs" />
     <Compile Include="Classes\ResponseProcessor.cs" />
+    <Compile Include="Classes\SpecialCommands\BuildStringResponse.cs" />
+    <Compile Include="Classes\SpecialCommands\SpecialCommandsProcessorsMap.cs" />
     <Compile Include="Classes\SpecialCommands\BuildSongResponse.cs" />
+    <Compile Include="Classes\SpecialCommands\ISpecialCommandBuilder.cs" />
     <Compile Include="Classes\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
